added install target to Makefile to install binaries into Chandler's release|debug dirs
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2370 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/wxPython-2.5/Makefile
+++ b/internal/wxPython-2.5/Makefile
@@ -41,10 +41,7 @@ wxPython:
                            install \
                            FINAL=$(FINAL) HYBRID=0
 
-snap: 
-	cd $(BUILD_ROOT); \
-        tar -cvzf $(SRC)/wxPython-$(SNAP)-$(RELVER).tar.gz \
-                  $(SNAP)/$(SITE)/wx
+MANIFEST=$(SNAP)/$(SITE)/wx
 
 clean:
 	cd $(SRC); devenv.com build/msw/msw.sln /clean $(Snap)
@@ -73,14 +70,11 @@ wxPython:
                            WX_CONFIG=$(PREFIX)/bin/wx-config \
                            build $(DIST_OPT) install FINAL=$(FINAL)
 
-snap: 
-	cd $(BUILD_ROOT); \
-        tar -cvzf $(SRC)/wxPython-$(SNAP)-$(RELVER).tar.gz \
-                  $(SNAP)/$(SITE)/wx \
-                  $(SNAP)/$(SITE)/wxPython \
-	          $(SNAP)/lib/libwx_mac* \
-	          $(SNAP)/lib/libwx_base_carbon* \
-	          $(SNAP)/share/locale
+MANIFEST=$(SNAP)/$(SITE)/wx \
+         $(SNAP)/$(SITE)/wxPython \
+ 	 $(SNAP)/lib/libwx_mac* \
+	 $(SNAP)/lib/libwx_base_carbon* \
+	 $(SNAP)/share/locale
 
 else
 
@@ -105,14 +99,11 @@ wxPython:
                            WXPORT=gtk2 UNICODE=1 \
                            build $(DIST_OPT) install FINAL=$(FINAL)
 
-snap: 
-	cd $(BUILD_ROOT); \
-        tar -cvzf $(SRC)/wxPython-$(SNAP)-$(RELVER).tar.gz \
-                  $(SNAP)/$(SITE)/wx \
-                  $(SNAP)/$(SITE)/wxPython \
-	          $(SNAP)/lib/libwx_base* \
-	          $(SNAP)/lib/libwx_gtk2* \
-	          $(SNAP)/share/locale
+MANIFEST=$(SNAP)/$(SITE)/wx \
+         $(SNAP)/$(SITE)/wxPython \
+	 $(SNAP)/lib/libwx_base* \
+	 $(SNAP)/lib/libwx_gtk2* \
+	 $(SNAP)/share/locale
 
 endif
 
@@ -139,3 +130,11 @@ build: wxWidgets wxPython
 
 upload: wxPython-$(SNAP)-$(RELVER).tar.gz
 	scp wxPython-$(SNAP)-$(RELVER).tar.gz $(UPLOAD)
+
+snap: 
+	cd $(BUILD_ROOT); \
+	tar -cvzf $(SRC)/wxPython-$(SNAP)-$(RELVER).tar.gz $(MANIFEST)
+
+install:
+	cd $(BUILD_ROOT); \
+	tar -cf - $(MANIFEST) | tar -C $(BUILD_ROOT)/.. -xvf -
