Make it so that you can still build if you launch bash from a DOS prompt, rather than requiring to launch Cygwin shell directly. Suggested by vajda.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2372 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile.inc
+++ b/external/Makefile.inc
@@ -5,6 +5,10 @@ ifeq ($(findstring CYGWIN,$(OS)),CYGWIN)
 OS=Cygwin
 endif
 
+ifeq ($(findstring WINNT,$(OS)),WINNT)
+OS=Cygwin
+endif
+
 ifeq ($(DEBUG),1)
 SNAP=debug
 Snap=Debug
