added install target to Makefile to install binaries into Chandler's release|debug dirs
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2373 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/Makefile
+++ b/internal/Makefile
@@ -31,3 +31,9 @@ upload:
         do \
             $(MAKE) -C $$system DEBUG=$(DEBUG) upload; \
         done
+
+install:
+	@for system in $(SYSTEMS); \
+        do \
+            $(MAKE) -C $$system DEBUG=$(DEBUG) install; \
+        done
