fixed missing bz2 bug
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2391 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/python/Makefile
+++ b/external/python/Makefile
@@ -118,14 +118,12 @@ $(SRC)/$(BUILD)/Makefile:
 	../configure --prefix=$(PREFIX) $(CONF_DBG)
 
 bzip2-$(BZIP2VERSION)/libbz2.a:
-	cd bzip2-$(BZIP2VERSION); \
-        make libbz2.a; \
-        install -D libbz2.a $(PREFIX)/lib/libbz2.a; \
-        install -D bzlib.h $(PREFIX)/include/bzlib.h
+	make -C bzip2-$(BZIP2VERSION) libbz2.a
 
 build: bzip2-$(BZIP2VERSION)/libbz2.a apply
-	cd $(SRC)/$(BUILD); \
-	$(MAKE) DB=$(PREFIX)/db $(COMP_OPT) install
+	install -D bzip2-$(BZIP2VERSION)/libbz2.a $(PREFIX)/lib/libbz2.a
+	install -D bzip2-$(BZIP2VERSION)/bzlib.h $(PREFIX)/include/bzlib.h
+	$(MAKE) -C $(SRC)/$(BUILD) DB=$(PREFIX)/db $(COMP_OPT) install
 
 snap: 
 	cd $(BUILD_ROOT); \
