Common commands all platforms
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2411 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/openssl/Makefile
+++ b/external/openssl/Makefile
@@ -10,60 +10,35 @@ BUILD=build_$(SNAP)
 
 .PHONY: openssl
 
-ifeq ($(OS),Cygwin)
-
 snap: 
 	cd $(BUILD_ROOT); \
-        tar -cvzf $(SRC)/openssl-$(SNAP)-$(RELVER).zip \
-                  $(SNAP)/$(SITE)/openssl
+        tar -cvzf $(SRC)/openssl-$(SNAP)-$(RELVER).tar.gz \
+                   $(SNAP)/openssl.cnf \
+                   $(SNAP)/bin/c_rehash \
+                   $(SNAP)/bin/openssl \
+                   $(SNAP)/include/openssl \
+                   $(SNAP)/misc \
+                   $(SNAP)/certs
 
-clean:
-	cd $(SRC); devenv.com build/msw/msw.sln /clean $(Snap)
-	cd $(SRC)/openssl; rm -rf $(SRC)/openssl/$(BUILD)
-
-upload: openssl-$(SNAP)-$(RELVER).zip
-	scp openssl-$(SNAP)-$(RELVER).zip $(UPLOAD)
-
-build:
-	@echo openssl build not yet implemented
-
-snap:
-	@echo openssl snap not yet implemented
-
-clean:
-	@echo openssl clean not yet implemented
-
-
-else
+upload: openssl-$(SNAP)-$(RELVER).tar.gz
+	scp openssl-$(SNAP)-$(RELVER).tar.gz $(UPLOAD)
 
 $(SRC)/Makefile:
 	cd $(SRC); \
 	./config --prefix=$(PREFIX) --openssldir=$(PREFIX) $(CONF_OPT)
-# 	cd $(SRC); mkdir -p $(BUILD); cd $(BUILD); \
-# 	../config --prefix=$(PREFIX) $(CONF_OPT) 
 
 openssl:   $(SRC)/Makefile
 	cd $(SRC); \
         $(MAKE) ; $(MAKE) install 
 
-snap: 
-	cd $(BUILD_ROOT); \
-        tar -cvzf $(SRC)/openssl-$(SNAP)-$(RELVER).tar.gz \
-                  $(SNAP)/$(SITE)/openssl 
-
-apply: $(SRC)/Makefile.ssl patches
-	patch -Nup0 < patches; echo ok
-
 expand: openssl-$(VERSION).tar.gz
 	tar xvzf openssl-$(VERSION).tar.gz
 	rm -f openssl-$(VERSION)/Makefile
 
+apply: $(SRC)/Makefile.ssl patches
+	patch -Nup0 < patches; echo ok
+
 clean:
 	cd $(SRC); make clean; rm -f Makefile
-
-upload: openssl-$(SNAP)-$(RELVER).tar.gz
-	scp openssl-$(SNAP)-$(RELVER).tar.gz $(UPLOAD)
-
-endif
 
 build: apply openssl
