update files to be ignored
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2422 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/.cvsignore
+++ b/chandler/.cvsignore
@@ -1,4 +1,9 @@
 __repository__
-Chandler-project.wpu Chandler-project-debug.wpu
-*.pyc *.pyo
-stdout.log chandler.log agent.log 
+Chandler-project.wpu
+Chandler-project-debug.wpu
+*.pyc
+*.pyo
+*.log
+debug
+release
+
