.cvsignore didn't ignore on smartcvs
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2423 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/.cvsignore
+++ b/external/.cvsignore
@@ -1,4 +1,7 @@
-debug debug*.tar.gz
-release release*.tar.gz
+debug
+debug*.tar.gz
+release
+release*.tar.gz
 sources*.tar
-gcc* mingw*
+gcc*
+mingw*
