Update for milestone 0.3.16
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2461 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/osx/bundle/Info.plist
+++ b/chandler/distrib/osx/bundle/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>RunChandler</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Chandler Release 0.3 from the Open Source Applications Foundation</string>
+	<string>Chandler Milestone 0.3.16 from the Open Source Applications Foundation</string>
 	<key>CFBundleIconFile</key>
 	<string>Chandler.icns</string>
 	<key>CFBundleInfoDictionaryVersion</key>
