--- a/external/openssl/Makefile
+++ b/external/openssl/Makefile
@@ -10,11 +10,12 @@ BUILD=build_$(SNAP)
 
 .PHONY: openssl
 
-#XXX Why do we need this for?
-ifeq ($(OS),Cygwin)
-BINFILE=openssl.exe
-else
-BINFILE=openssl
+ifeq ($(OS),Darwin)
+PLATFORM='darwin-ppc-cc'
+endif
+ifeq ($(OS),Linux)
+# XXX fix later, just for now
+PLATFORM='linux-pentium'
 endif
 
 REAL_OS=unknown
@@ -32,10 +33,14 @@ ifeq ($(REAL_OS),WINNT)
 # TODO: debug version, and the ability to build both debug & release simult.
 #       Do we need patches file or can we get rid of it?
 
-openssl:
-	cd $(SRC); \
+$(SRC)/$(BUILD)/Makefile:  $(SRC)/Configure
+	cd $(SRC); mkdir $(BUILD); cp Makefile.org *.h $(BUILD)/; \
+	cp -r crypto ssl apps certs tools util include $(BUILD)/;cd $(BUILD);\
 	MAKEFLAGS=;\
-	perl Configure $(CONF_OPT) VC-WIN32; \
+	perl ../Configure --openssldir=$(PREFIX) --install_prefix=$(PREFIX) $(CONF_OPT) VC-WIN32; \
+
+
+openssl: $(SRC)/$(BUILD)/Makefile.ssl
 	ms/do_masm.bat; \
 	nmake -f ms/ntdll.mak;\
 	cd out32dll; \
@@ -43,41 +48,40 @@ openssl:
 	echo 'Installing...';\
 	cp -f ssleay32.dll $(PREFIX)/bin/; \
 	cp -f libeay32.dll $(PREFIX)/bin/; \
-	cp -f ssleay32.lib $(PREFIX)/bin/libs/; \
-	cp -f libeay32.lib $(PREFIX)/bin/libs/; \
-	cp -fr ../inc32/openssl $(PREFIX)/bin/Include/openssl;\
+	cp -f ssleay32.lib $(PREFIX)/lib/; \
+	cp -f libeay32.lib $(PREFIX)/lib/; \
+	cp -fr ../inc32/openssl $(PREFIX)/Include/;\
 	echo 'Installation done.'
 
 snap: 
 	cd $(BUILD_ROOT); \
-        tar -cvzf $(SRC)/openssl-$(SNAP)-$(RELVER).tar.gz \
-                   $(SNAP)/openssl.cnf \
-                   $(SNAP)/bin/c_rehash \
-                   $(SNAP)/bin/$(BINFILE) \
-                   $(SNAP)/include/ \
-                   $(SNAP)/lib/libcrypto.a \
-                   $(SNAP)/lib/libssl.a  \
-                   $(SNAP)/lib/pkgconfig/openssl.pc \
+	tar -cvzf $(OPENSSL)/$(SNAP).tar.gz \
+                   $(SNAP)/bin/ssleay32.dll \
+                   $(SNAP)/bin/libeay32.dll \
+                   $(SNAP)/include/openssl \
+                   $(SNAP)/lib/ssleay32.lib \
+                   $(SNAP)/lib/libeay32.lib  \
                    $(SNAP)/misc \
                    $(SNAP)/private \
                    $(SNAP)/certs
 
 else
 
-openssl:   $(SRC)/Makefile
-	cd $(SRC); \
-        $(MAKE) ; $(MAKE) install 
+openssl:   $(SRC)/$(BUILD)/Makefile
+	cd $(SRC)/$(BUILD); \
+	$(MAKE) -f Makefile.ssl; $(MAKE) -f Makefile.ssl install 
 
-$(SRC)/Makefile:
-	cd $(SRC); \
-	./config --prefix=$(PREFIX) --openssldir=$(PREFIX) $(CONF_OPT)
+$(SRC)/$(BUILD)/Makefile: $(SRC)/Configure
+	cd $(SRC); mkdir $(BUILD); cp Makefile.org *.h $(BUILD)/; \
+	cp -r crypto ssl apps certs tools util include $(BUILD)/;cd $(BUILD);\
+	perl ../Configure --openssldir=$(PREFIX) $(CONF_OPT) $(PLATFORM)
 
 snap: 
 	cd $(BUILD_ROOT); \
-        tar -cvzf $(SRC)/openssl-$(SNAP)-$(RELVER).tar.gz \
+	tar -cvzf $(OPENSSL)/$(SNAP).tar.gz \
                    $(SNAP)/openssl.cnf \
                    $(SNAP)/bin/c_rehash \
-                   $(SNAP)/bin/$(BINFILE) \
+                   $(SNAP)/bin/openssl \
                    $(SNAP)/include/ \
                    $(SNAP)/lib/libcrypto.a \
                    $(SNAP)/lib/libssl.a  \
@@ -88,8 +92,7 @@ snap:
 
 endif
 
-upload: openssl-$(SNAP)-$(RELVER).tar.gz
-	scp openssl-$(SNAP)-$(RELVER).tar.gz $(UPLOAD)
+$(SRC): apply
 
 expand: openssl-$(VERSION).tar.gz
 	tar xvzf openssl-$(VERSION).tar.gz
@@ -99,6 +102,6 @@ apply: expand patches
 	patch -Nup0 < patches; echo ok
 
 clean:
-	rm -rf $(SRC)
+	rm -rf $(SRC)/$(BUILD)
 
 build: openssl
