made apply conditional on existence of patches-
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2510 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/epydoc/Makefile
+++ b/external/epydoc/Makefile
@@ -7,9 +7,12 @@ include $(BUILD_ROOT)/Makefile.inc
 
 BUILD=build_$(SNAP)
 
+.PHONY: patches-$(VERSION)
 
 apply: patches-$(VERSION)
-	patch -Nup0 < patches-$(VERSION); echo ok
+	if [ -f patches-$(VERSION) ]; then \
+            patch -Nup0 < patches-$(VERSION); echo ok; \
+        fi
 
 build: apply
 	cd $(SRC); \
