--- a/internal/PyLucene/Makefile.osx
+++ b/internal/PyLucene/Makefile.osx
@@ -29,19 +29,23 @@ PYTHON_INC = $(PYTHON)/include/python2.3
 PYTHON_SITE = $(PYTHON)/lib/python2.3/site-packages
 
 LUCENE_SRCS = `find $(LUCENE)/src/java -name '*.java' -print`
+
+OBJS = $(BINDIR)/lucene.o $(BINDIR)/reader.java.o $(BINDIR)/reader.cpp.o
+LIBS = $(BINDIR)/_PyLucene.so
+
+$(BINDIR):
+	mkdir -p $(BINDIR)/classes
+
+ifdef DB
+
 DB_SRCS = `find $(DB)/java/src/com/sleepycat/db -regex '.*/db/[^/]*java'`
 STORE_SRCS = `find store -name '*.java' -print`
-
-OBJS = $(BINDIR)/store.o $(BINDIR)/db_const.o $(BINDIR)/db.o $(BINDIR)/lucene.o $(BINDIR)/reader.java.o $(BINDIR)/reader.cpp.o
-
-
-$(BINDIR)/lucene.o:
-	if [ ! -d $(BINDIR) ]; then mkdir -p $(BINDIR)/classes; fi
-	$(JCC) -C -d $(CLASSES) $(LUCENE_SRCS)
-	$(JCC) $(CCFLAGS) -c -o $(BINDIR)/lucene.o $(LUCENE_SRCS)
+OBJS := $(BINDIR)/store.o $(BINDIR)/db_const.o $(BINDIR)/db.o $(OBJS)
+LIBS := $(BINDIR)/libdb_java-4.2.jnilib $(LIBS)
+SWIGOPT = -D_WITH_DB_DIRECTORY=1
+DBOPT = -I$(RELDIR)/db/include
 
 $(BINDIR)/db_const.o:
-	if [ ! -d $(BINDIR) ]; then mkdir -p $(BINDIR)/classes; fi
 	$(JCC) -C -d $(CLASSES) $(DB)/java/src/com/sleepycat/db/$(mode)/DbConstants.java
 	$(JCC) -fjni $(CCFLAGS) -c -o $(BINDIR)/db_const.o $(DB)/java/src/com/sleepycat/db/$(mode)/DbConstants.java
 
@@ -49,30 +53,44 @@ $(BINDIR)/db.o: $(BINDIR)/db_const.o
 	$(JCC) -C -d $(CLASSES) --classpath=$(CLASSES) $(DB_SRCS)
 	$(JCC) -fjni $(CCFLAGS) -c -o $(BINDIR)/db.o --classpath=$(CLASSES) $(DB_SRCS)
 
-# with gcc 3.4-20040107, libdb_java crashes when compiled with -O2
+# with gcc 3.4-20040407, libdb_java segfaults when compiled with -O2
 
 $(BINDIR)/libdb_java-4.2.jnilib:
-	$(CC) -shared -bundle -o $(BINDIR)/libdb_java-4.2.jnilib -O $(LDFLAGS) -I$(GCJ)/include -I$(DB) -I$(DB)/build_$(mode) -I$(RELDIR)/db/include $(DB)/libdb_java/db_java_wrap.c $(RELDIR)/db/lib/libdb-4.2.dylib
+	$(CC) -shared -bundle -o $(BINDIR)/libdb_java-4.2.jnilib -O $(LDFLAGS) -I$(GCJ)/include -I$(DB) -I$(DB)/build_$(mode) $(DB)/libdb_java/db_java_wrap.c $(RELDIR)/db/lib/libdb-4.2.dylib
 
 $(BINDIR)/store.o: $(BINDIR)/db.o $(BINDIR)/lucene.o
 	$(JCC) -C -d $(CLASSES) --classpath=$(CLASSES) $(STORE_SRCS)
 	$(JCC) -fjni $(CCFLAGS) -c -o $(BINDIR)/store.o --classpath=$(CLASSES) $(STORE_SRCS)
 
+else
+
+SWIGOPT =
+DBOPT =
+
+endif
+
+$(BINDIR)/lucene.o:
+	$(JCC) -C -d $(CLASSES) $(LUCENE_SRCS)
+	$(JCC) $(CCFLAGS) -c -o $(BINDIR)/lucene.o $(LUCENE_SRCS)
+
 $(BINDIR)/reader.java.o: java/org/osafoundation/io/PythonReader.java
 	$(JCC) -C -d $(CLASSES) java/org/osafoundation/io/PythonReader.java
 	$(JCC) $(CCFLAGS) -I$(GCJ)/include -c -o $(BINDIR)/reader.java.o java/org/osafoundation/io/PythonReader.java
-	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.osafoundation.io.PythonReader
 
-$(BINDIR)/reader.cpp.o: cpp/PythonReader.cpp $(BINDIR)/reader.java.o
+$(BINDIR)/reader.cpp.o: $(CLASSES)/org/osafoundation/io/PythonReader.h cpp/PythonReader.cpp $(BINDIR)/reader.java.o
 	$(JCC) -I$(PYTHON_INC) -I$(GCJ)/include -I$(CLASSES) $(CCFLAGS) -c -o $(BINDIR)/reader.cpp.o cpp/PythonReader.cpp
 
-$(BINDIR)/_PyLucene.so: $(OBJS) PyLucene_wrap.cxx
+$(CLASSES)/org/osafoundation/io/PythonReader.h:
+ifdef DB
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) com.sleepycat.db.DbEnv
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) com.sleepycat.db.Db
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) com.sleepycat.db.DbTxn
+endif
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.store.Directory
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.store.FSDirectory
+ifdef DB
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.store.db.DbDirectory
+endif
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.analysis.Analyzer
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.analysis.standard.StandardAnalyzer
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.document.Field
@@ -83,16 +101,27 @@ $(BINDIR)/_PyLucene.so: $(OBJS) PyLucene_wrap.cxx
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.search.Hits
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.search.IndexSearcher
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.queryParser.QueryParser
-	$(CXX) -shared -bundle -o $(BINDIR)/_PyLucene.so $(CCFLAGS) -I$(GCJ)/include -I$(CLASSES) -I$(PYTHON_INC) -I$(RELDIR)/db/include PyLucene_wrap.cxx $(OBJS) -L$(GCJ)/lib -lgcj -liconv -undefined suppress -flat_namespace -multiply_defined suppress
+	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.osafoundation.io.PythonReader
 
-all: $(BINDIR)/_PyLucene.so $(BINDIR)/libdb_java-4.2.jnilib
-	echo build of $(BINDIR)/_PyLucene.so complete
+PyLucene_wrap.cxx: $(BINDIR)/reader.cpp.o PyLucene.i 
+ifdef SWIG
+	$(SWIG) -modern $(SWIGOPT) -I$(BINDIR)/classes -c++ -python PyLucene.i
+endif
 
-install: $(BINDIR)/_PyLucene.so $(BINDIR)/libdb_java-4.2.jnilib
+$(BINDIR)/_PyLucene.so: $(OBJS) PyLucene_wrap.cxx
+	$(CXX) -shared -bundle -o $(BINDIR)/_PyLucene.so $(CCFLAGS) $(SWIGOPT) $(DBOPT) -I$(GCJ)/include -I$(CLASSES) -I$(PYTHON_INC) PyLucene_wrap.cxx $(OBJS) -L$(GCJ)/lib -lgcj -liconv -undefined suppress -flat_namespace -multiply_defined suppress
+
+all: $(BINDIR) $(LIBS)
+	@echo build of $(BINDIR)/_PyLucene.so complete
+
+install: $(BINDIR) $(LIBS)
 	install PyLucene.py $(PYTHON_SITE)
 	install $(BINDIR)/_PyLucene.so $(PYTHON_SITE)
+ifdef DB
+	mkdir -p $(RELDIR)/db/lib
 	install $(BINDIR)/libdb_java-4.2.jnilib $(RELDIR)/db/lib
 	install libdb_java-4.2.la.osx $(RELDIR)/db/lib/libdb_java-4.2.la
+endif
 	mkdir -p $(RELDIR)/lib
 	install $(GCJ)/lib/libgcj.5.dylib $(RELDIR)/lib
 	install $(GCJ)/lib/libstdc++.6.dylib $(RELDIR)/lib
