--- a/internal/PyLucene/Makefile.mingw
+++ b/internal/PyLucene/Makefile.mingw
@@ -33,15 +33,20 @@ LUCENE = $(SRCDIR)\lucene-$(VERSION)
 PYTHON_INC = $(RELDIR)\bin\Include
 PYTHON_SITE = $(RELDIR)\bin\Lib\site-packages
 
-OBJS = $(BINDIR)\db_const.o $(BINDIR)\db.o $(BINDIR)\store.o $(BINDIR)\lucene.o  $(BINDIR)\reader.java.o $(BINDIR)\reader.cpp.o
+OBJS = $(BINDIR)\lucene.o $(BINDIR)\reader.java.o $(BINDIR)\reader.cpp.o
+LIBS = $(BINDIR)\_PyLucene$(_dbg).pyd
 
-$(BINDIR)\lucene.o:
-	if not exist $(BINDIR) mkdir $(BINDIR)\classes
-	$(JCC) -C -d $(CLASSES) @lucene.lst
-	$(JCC) $(CCFLAGS) -c -o $(BINDIR)\lucene.o @lucene.lst
+$(BINDIR):
+	mkdir $(BINDIR)\classes
+
+!ifdef DB
+
+OBJS = $(BINDIR)\db_const.o $(BINDIR)\db.o $(BINDIR)\store.o $(OBJS)
+LIBS = $(BINDIR)\libdb_java42$(dbg).dll $(LIBS)
+SWIGOPT = -D_WITH_DB_DIRECTORY=1
+DBOPT = -I$(RELDIR)\include\db
 
 $(BINDIR)\db_const.o:
-	if not exist $(BINDIR) mkdir $(BINDIR)\classes
 	$(JCC) -C -d $(CLASSES) $(DB)/java/src/com/sleepycat/db/$(mode)/DbConstants.java
 	$(JCC) -fjni $(CCFLAGS) -c -o $(BINDIR)\db_const.o $(DB)/java/src/com/sleepycat/db/$(mode)/DbConstants.java
 
@@ -50,27 +55,41 @@ $(BINDIR)\db.o: $(BINDIR)\db_const.o
 	$(JCC) -fjni $(CCFLAGS) -c -o $(BINDIR)\db.o --classpath=$(CLASSES) @db.lst
 
 $(BINDIR)\libdb_java42$(dbg).dll:
-	$(CC) -shared $(CCFLAGS) -D_NO_OLDNAMES -DGCJ -o $(BINDIR)\libdb_java42$(dbg).dll -I$(DB) -I$(DB)\build_$(mode) -I$(RELDIR)\include\db $(DB)\libdb_java\db_java_wrap.c $(RELDIR)\bin\libdb42$(dbg).dll
+	$(CC) -shared $(CCFLAGS) -D_NO_OLDNAMES -DGCJ -o $(BINDIR)\libdb_java42$(dbg).dll $(DBOPT) -I$(DB) -I$(DB)\build_$(mode) $(DB)\libdb_java\db_java_wrap.c $(RELDIR)\bin\libdb42$(dbg).dll
 
 $(BINDIR)\store.o: $(BINDIR)\db.o $(BINDIR)\lucene.o
 	$(JCC) -C -d $(CLASSES) --classpath=$(CLASSES) @store.lst
 	$(JCC) -fjni $(CCFLAGS) -c -o $(BINDIR)\store.o --classpath=$(CLASSES) @store.lst
 
+!else
+
+SWIGOPT =
+DBOPT =
+
+!endif
+
+$(BINDIR)\lucene.o:
+	$(JCC) -C -d $(CLASSES) @lucene.lst
+	$(JCC) $(CCFLAGS) -c -o $(BINDIR)\lucene.o @lucene.lst
+
 $(BINDIR)\reader.java.o: java/org/osafoundation/io/PythonReader.java
 	$(JCC) -C -d $(CLASSES) java/org/osafoundation/io/PythonReader.java
 	$(JCC) $(CCFLAGS) -c -o $(BINDIR)/reader.java.o java/org/osafoundation/io/PythonReader.java
-	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.osafoundation.io.PythonReader
 
-$(BINDIR)\reader.cpp.o: cpp/PythonReader.cpp $(BINDIR)/reader.java.o
-	$(JCC) -I$(PYTHON_INC) -I$(CLASSES) $(CCFLAGS) -c -o $(BINDIR)/reader.cpp.o cpp/PythonReader.cpp
+$(BINDIR)\reader.cpp.o: $(CLASSES)\org\osafoundation\io\PythonReader.h cpp\PythonReader.cpp $(BINDIR)\reader.java.o
+	$(JCC) -I$(PYTHON_INC) -I$(CLASSES) $(CCFLAGS) -c -o $(BINDIR)\reader.cpp.o cpp\PythonReader.cpp
 
-$(BINDIR)\_PyLucene$(_dbg).pyd: $(OBJS) PyLucene_wrap.cxx
+$(CLASSES)\org\osafoundation\io\PythonReader.h:
+!ifdef DB
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) com.sleepycat.db.DbEnv
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) com.sleepycat.db.Db
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) com.sleepycat.db.DbTxn
+!endif
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.store.Directory
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.store.FSDirectory
+!ifdef DB
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.store.db.DbDirectory
+!endif
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.analysis.Analyzer
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.analysis.standard.StandardAnalyzer
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.document.Field
@@ -81,17 +100,26 @@ $(BINDIR)\_PyLucene$(_dbg).pyd: $(OBJS) PyLucene_wrap.cxx
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.search.Hits
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.search.IndexSearcher
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.queryParser.QueryParser
+	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.osafoundation.io.PythonReader
 
-	$(CXX) -c $(CCFLAGS) $(PYDBG) -D_NO_OLDNAMES -I$(CLASSES) -I$(PYTHON_INC) -I$(RELDIR)\include\db -o $(BINDIR)\PyLucene_wrap.o PyLucene_wrap.cxx
+PyLucene_wrap.cxx: $(BINDIR)/reader.cpp.o PyLucene.i 
+!ifdef SWIG
+	$(SWIG) -modern $(SWIGOPT) -I$(BINDIR)\classes -c++ -python PyLucene.i
+!endif
+
+$(BINDIR)\_PyLucene$(_dbg).pyd: $(OBJS) PyLucene_wrap.cxx
+	$(CXX) -c $(CCFLAGS) $(PYDBG) -D_NO_OLDNAMES $(SWIGOPT) $(DBOPT) -I$(CLASSES) -I$(PYTHON_INC) -I$(RELDIR)\include\db -o $(BINDIR)\PyLucene_wrap.o PyLucene_wrap.cxx
 	$(CXX) -shared $(LDFLAGS) -o $(BINDIR)\_PyLucene$(_dbg).pyd $(OBJS) $(RELDIR)\bin\python23$(_dbg).dll $(BINDIR)\PyLucene_wrap.o -lgcj -lwin32k -lws2_32
 
-all: $(BINDIR)\_PyLucene$(_dbg).pyd $(BINDIR)\libdb_java42$(dbg).dll
+all: $(BINDIR) $(LIBS)
 	echo build of $(BINDIR)\_PyLucene$(_dbg).pyd complete
 
-install: $(BINDIR)\_PyLucene$(_dbg).pyd $(BINDIR)\libdb_java42$(dbg).dll
+install: $(BINDIR) $(LIBS)
 	copy PyLucene.py $(PYTHON_SITE)
 	copy $(BINDIR)\_PyLucene$(_dbg).pyd $(PYTHON_SITE)
+!ifdef DB
 	copy $(BINDIR)\libdb_java42$(dbg).dll $(RELDIR)\bin
+!endif
 
 clean:
 	rmdir build_$(mode) /s/q
