Finally found the magic incantation to setup.py which allows it to find openssl headers and libs from our build environment. Also setting PATH here to find our copy of SWIG from external.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2548 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/m2crypto/Makefile
+++ b/internal/m2crypto/Makefile
@@ -6,9 +6,14 @@ M2CRYPTO=$(INTERNAL)/m2crypto
 
 BUILD=build_$(SNAP)
 
+export PATH:=$(BUILD_ROOT)/$(SNAP)/bin:$(BUILD_ROOT)/$(SNAP)/bin/swig:$(PATH)
+
 build: $(PYTHON)
-	$(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
-                           install --force
+	$(PYTHON) setup.py \
+		build_ext --library-dirs=$(BUILD_ROOT)/$(SNAP)/lib \
+			--include-dirs=$(BUILD_ROOT)/$(SNAP)/include \
+		build --build-base=$(BUILD) $(DIST_OPT) \
+		install --force
 
 snap: 
 	cd $(BUILD_ROOT); \
