We can add SWIG to path closer to invocation, so no need to add it to the whole build environment.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2549 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile.inc
+++ b/external/Makefile.inc
@@ -59,7 +59,7 @@ ifdef VS71COMNTOOLS
 MSVC_ROOT:=$(shell cygpath -u $$VS71COMNTOOLS\\..\\..)
 MSVC_DIR:=$(MSVC_ROOT)/Vc7
 
-export PATH:=$(MSVC_ROOT)/Common7/IDE:$(MSVC_DIR)/BIN:$(MSVC_ROOT)/Common7/Tools:$(MSVC_ROOT)/Common7/Tools/bin/prerelease:$(MSVC_ROOT)/Common7/Tools/bin:$(PATH):$(BUILD_ROOT)/$(SNAP)/bin/swig
+export PATH:=$(MSVC_ROOT)/Common7/IDE:$(MSVC_DIR)/BIN:$(MSVC_ROOT)/Common7/Tools:$(MSVC_ROOT)/Common7/Tools/bin/prerelease:$(MSVC_ROOT)/Common7/Tools/bin:$(PATH)
 
 export INCLUDE:=$(shell cygpath -awp $(MSVC_DIR)/atlmfc/include:$(MSVC_DIR)/PlatformSDK/include/prerelease:$(MSVC_DIR)/PlatformSDK/include:$(MSVC_DIR)/include)
 
